[package]
name = "spacews"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-cors = "0.7.0"
actix-files = "0.6.2"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
dashmap = "6.1.0"
rand = "0.8.5"
rusty_time = "0.11.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
tokio = { version = "1.43.0 ",  features = ["full"]}
